--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(
 add_executable(
     ${PROJECT_NAME}
     src/main.cpp
+    src/white_balancer.cpp
 )
 
 target_link_libraries(
